cambios agregamos sitio de twithc

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Hola Mundo</title>
 </head>
 <body>
-    <p> Hola Estudiantes este es mi sitio web sigueme en twiter</p>
+    <p> Hola amigos y amigas este es mi sitio web sigueme en twiter, cuentame si quieres ser el mejor programador. </p>
 </body>
 </html>
